# rouge-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark.py  pyproject.toml
.github/workflows/: release.yml
src/: lib.rs  scorer.rs
tests/: test_api.py  test_baseline.py  test_smoke.py
