[package]
name = "fast_rouge"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_rouge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[profile.release]
codegen-units = 1
lto = "thin"
