[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rouge-rust"
description = "High-performance Rust-backed ROUGE scoring for Python"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["nlp", "rouge", "evaluation", "rust", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kyle-mirich/rouge-rust"
Repository = "https://github.com/kyle-mirich/rouge-rust"
Issues = "https://github.com/kyle-mirich/rouge-rust/issues"

[project.optional-dependencies]
dev = [
    "maturin>=1.12,<2.0",
    "pytest>=8",
    "rouge-score>=0.1.2",
    "twine>=6",
]

[tool.maturin]
module-name = "fast_rouge"
